# sop_lake

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP_GUIDE.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml  tests.yml
docs/: api.md  architecture.md  examples.md  theory.md
examples/: config_hubbard_imaginary.yaml
src/: AIMSOP_utils.py  SOP.py  __init__.py  cost_fn.py  cost_fn_nogrid.py  data_io.py  dmft_config.py  dmft_main.py  dmft_simulation.py  dyn_poles.py  dyn_poles_utils.py  embedding_utils.py  hubbard.py  lanczos.py  mbAIMSOP_solver.py  mb_utils.py  results_analysis.ipynb  utils.py
src/sop_lake/: .gitignore  AIMSOP_utils.py  SOP.py  cost_fn.py  cost_fn_eff.py  data_io.py  dmft_config.py  dmft_main.py  dmft_simulation.py  dyn_poles.py  dyn_poles_utils.py  embedding_utils.py  grid_free_tests.ipynb  lanczos.py  mbAIMSOP_solver.py  mb_utils.py  results_analysis.ipynb  utils.py
tests/: __init__.py  test_integration.py  test_models.py  test_solvers.py
